# imsrg

./: CITATION.cff  README.md
doc/: benchmarking.dox  installation.dox
doc/html/: HartreeFock_8hh_source.html  ModelSpace_8hh_source.html  Operator_8hh_source.html  ReadWrite_8hh_source.html  annotated.html  classHartreeFock-members.html  classHartreeFock.html  classKet-members.html  classKet.html  classModelSpace-members.html  classModelSpace.html  classOperator-members.html  classOperator.html  classOperatorChannel-members.html  classOperatorChannel.html  classOrbit-members.html  classOrbit.html  classReadWrite-members.html  classReadWrite.html  classes.html  files.html  functions.html  functions_func.html  index.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  search.js
doc/latex/: annotated.tex  classHartreeFock.tex  classKet.tex  classModelSpace.tex  classOperator.tex  classOperatorChannel.tex  classOrbit.tex  classReadWrite.tex  refman.tex
input/: .s.sps.swp  .vsrg1.8_n3lo500_w_coulomb_emax6_hw24.int.swo  .vsrg1.8_n3lo500_w_coulomb_emax6_hw24.int.swp  .vsrg2.0_n3lo500_w_coulomb_emax6_hw24.int.swp  lmax4s.sps  lmax6s.sps  nl4.sps  s.sps  sd.sps  sd2.sps  sd4.sps  tbme2.int.REMOVED.git-id  vjason1.8.int.REMOVED.git-id  vjason2.0.int.REMOVED.git-id  vs.int  vs_mix.int  vspsd.int  vsrg2.0_n3lo500_w_coulomb_emax6_hw24.int.REMOVED.git-id
output/: .HF2b.out.swp  .Hbare2b.out.swp  HF1b.out  HF2b.out.REMOVED.git-id  Hbare1b.out  Hbare2b.out.REMOVED.git-id
src/: .AngMom.cc.swp  .AngMom.hh.swp  .HartreeFock.cc.swp  .HartreeFock.hh.swp  .IMSRGSolver.cc.swp  .IMSRGSolver.hh.swp  .Makefile.swp  .ModelSpace.cc.swo  .ModelSpace.cc.swp  .ModelSpace.hh.swo  .ModelSpace.hh.swp  .Operator.cc.swp  .Operator.hh.swp  .ReadWrite.cc.swp  .ReadWrite.hh.swp  .awkdiff.dat.swp  .errors.swp  .flow.dat.swp  .gitignore  .gprof.out.swp  .imsrg_util.cc.swm  .imsrg_util.cc.swn  .imsrg_util.cc.swo  .imsrg_util.cc.swp  .imsrg_util.hh.swm  .imsrg_util.hh.swn  .imsrg_util.hh.swo  .imsrg_util.hh.swp  .main.cc.swp  .pyIMSRG.cc.swp  .settings.inp.swp  .swp.REMOVED.git-id  .tmp.swo  .tmp.swp  .tmpHF.swp  .tmpO16_emax8.swp  .tmpO24.swp  .tmp_atan.swp  .tmperr.swp  .tmpsave.swp  (+157 more)
src/_old_armadillo/: armadillo
src/_old_armadillo/armadillo_bits/: config.hpp  config.hpp.cmake
src/armadillo/: armadillo
src/armadillo/armadillo_bits/: .config.hpp.swp  arma_version.hpp  compiler_setup.hpp  config.hpp  gmm_diag_bones.hpp  gmm_diag_meat.hpp
src/boost_src/: CMakeLists.txt  gzip.cc
src/profiling/: CMakeLists.txt  UnitTestDoubleCommutators_ragnar.py  comm132.cc  comm133.cc  comm222ph.cc  comm222pphh.cc  comm223.cc  comm231.cc  comm232.cc  comm330.cc  comm331.cc
work/compiled/: Makefile  Parameters.hh  SingleRef.cc  Universal.cc  Universal_tensor_debug.cc  ValenceSpace.cc  ValenceSpace_targeted.cc
work/scripts/: goRunSingleRef.sh  goUniversal.py  runSingleRef.sh  runUniversal.sh  runValencSpace.sh
work/scripts/python/: BareOperator.py  E2bare_hw24_sd-shell_1b.op  GetHFFormFactors.py  GetNormalOrderedH.py  KineticEnergy.py  M1bare.op  M1bare_hw40_p-shell_2b.op  M1bare_hw40_sp-shell_2b.op  M1bare_hw40_sp-shell_2b.op_iso  M1bare_hw40_sp-shell_2b.op_isov2  TestJavier.py  Trel_hw1.op  dump  input  newJuly19_ConvertTensor2bToIsospin.py  output
work/scripts/python/jhernandez/: 2B_ME_Instrinsic_States.txt  2B_ME_Lab_States.txt  2B_ME_MEC_NLO_intrinsic.txt  2B_ME_MEC_NLO_lab.txt  MEC_input.txt
work/scripts/python/testing/: TestDagger.py
