add_executable(comm232 comm232.cc)
target_link_libraries(comm232 
    IMSRG
    Parameters
    PhysicalConstants
    Version
)

add_executable(comm223 comm223.cc)
target_link_libraries(comm223 
    IMSRG
    Parameters
    PhysicalConstants
    Version
)

add_executable(comm133 comm133.cc)
target_link_libraries(comm133 
    IMSRG
    Parameters
    PhysicalConstants
    Version
)

add_executable(comm222pphh comm222pphh.cc)
target_link_libraries(comm222pphh 
    IMSRG
    Parameters
    PhysicalConstants
    Version
)

add_executable(comm222ph comm222ph.cc)
target_link_libraries(comm222ph 
    IMSRG
    Parameters
    PhysicalConstants
    Version
)

add_executable(comm132 comm132.cc)
target_link_libraries(comm132 
    IMSRG
    Parameters
    PhysicalConstants
    Version
)

add_executable(comm231 comm231.cc)
target_link_libraries(comm231 
    IMSRG
    Parameters
    PhysicalConstants
    Version
)

add_executable(comm330 comm330.cc)
target_link_libraries(comm330 
    IMSRG
    Parameters
    PhysicalConstants
    Version
)

add_executable(comm331 comm331.cc)
target_link_libraries(comm331 
    IMSRG
    Parameters
    PhysicalConstants
    Version
)
